--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ body{
     margin-bottom:20px;
 }
 /* section two */
-.container-two{
+.container-two,.container-three{
     display:flex;
     align-items:center;
     margin-left:200px;
@@ -91,4 +91,61 @@ body{
 .orange{
     color:#FF900E;
     font-size:25px;
+}
+/* section three */
+.features{
+     font-size:25px;
+     border-left:3px solid orangered;
+     padding-left:15px;
+}
+.text-three{
+    font-size:10px;
+    color: #727272;
+}
+.text-four{
+    font-size:15px;
+}
+.one{
+    border:3px solid  white;
+    padding-left:10px;
+    padding-right:10px;
+    margin-bottom:10px;
+    background-color: white;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+}
+.design{
+    height:700px;
+    width:700px;
+    margin-left:100px;
+}
+.btn{
+    color:#FFFFFF;
+    font-Weight:600;
+    font-size:10px;
+    height: 100px;
+    width:140px;
+    Border:0;
+    border-radius: 5px;
+    background-color:#FD6E0A;
+    position:relative;
+    z-index:10;
+    left:580px;
+    top:-140px;
+}
+.style{
+    font-size:30px;
+}
+/* section five */
+.container-five{
+    margin-left:200px;
+    margin-right:1000px;
+    margin-bottom:70px;
+}
+.feature{
+    font-size:25px;
+}
+.career{
+    position:relative;
+    top:-10px;
 }
