--- a/styles/style.css
+++ b/styles/style.css
@@ -137,7 +137,7 @@ body{
     font-size:30px;
 }
 /* section five */
-.container-five{
+.container-five,.container-eight{
     margin-left:200px;
     margin-right:1000px;
     margin-bottom:70px;
@@ -307,6 +307,14 @@ body{
 }
 /* section nine */
 .container-nine{
+    display:flex;
+    align-items: center;
+    margin-left:200px;
+    margin-right:200px;
+    margin-bottom:70px;
+    margin-top:-50px;
+}
+.container-ten{
     margin-left:200px;
     margin-right:200px;
     margin-bottom:70px;
@@ -321,5 +329,5 @@ body{
 .text-five{
     font-size:15px;
     color: #424242;
-    padding-top:25px;
+    padding-top:15px;
 }
